<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">\t当前细胞为死亡状态时，当周围有3个存活细胞时，该细胞变成存活状态。 （模拟繁殖）\n\n\t当前细胞为存活状态时，当周围低于2个（不包含2个）存活细胞时， 该细胞变成死亡状态。（模拟生命数量稀少）\n\n\t当前细胞为存活状态时，当周围有2个或3个存活细胞时， 该细胞保持原样。\n\n\t当前细胞为存活状态时，当周围有3个以上的存活细胞时，该细胞变成死亡状态。（模拟生命数量过多）\n\n\t自己去维基百科吧XD...</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clean">Clean</string>
    <string name="create">Create</string>
</resources>